TextualPart/antlr/letoParser.js
// Generated from leto.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import letoListener from './letoListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class letoParser extends antlr4.Parser {

    static grammarFileName = "leto.g4";
    static literalNames = [ null, "';'", "'componant'", "'from'", "'{'", 
                            "'}'", "'logo'", "':'", "'host'", "','", "'relationship'", 
                            "'asset'", "'link'", "'-'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "PATH", 
                             "ID", "STRINGLITERAL", "LETTRE", "NUMBER", 
                             "FLOAT", "COMMENT", "EOL", "WS" ];
    static ruleNames = [ "prog", "line", "instructions", "instruction", 
                         "definition", "instantiation", "componant", "componant_attributes", 
                         "componant_attribute", "logo", "hosts", "relationship", 
                         "asset", "link", "number", "comment", "id" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = letoParser.ruleNames;
        this.literalNames = letoParser.literalNames;
        this.symbolicNames = letoParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, letoParser.RULE_prog);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 35; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 34;
	            this.line();
	            this.state = 37; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << letoParser.T__1) | (1 << letoParser.T__9) | (1 << letoParser.T__10) | (1 << letoParser.T__11) | (1 << letoParser.COMMENT))) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	line() {
	    let localctx = new LineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, letoParser.RULE_line);
	    try {
	        this.state = 44;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case letoParser.T__1:
	        case letoParser.T__9:
	        case letoParser.T__10:
	        case letoParser.T__11:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 39;
	            this.instructions();
	            this.state = 41;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	            if(la_===1) {
	                this.state = 40;
	                this.comment();

	            }
	            break;
	        case letoParser.COMMENT:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 43;
	            this.comment();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instructions() {
	    let localctx = new InstructionsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, letoParser.RULE_instructions);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        this.instruction();
	        this.state = 51;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 47;
	                this.match(letoParser.T__0);
	                this.state = 48;
	                this.instruction(); 
	            }
	            this.state = 53;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	        this.state = 54;
	        this.match(letoParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruction() {
	    let localctx = new InstructionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, letoParser.RULE_instruction);
	    try {
	        this.state = 58;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case letoParser.T__1:
	        case letoParser.T__9:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 56;
	            this.definition();
	            break;
	        case letoParser.T__10:
	        case letoParser.T__11:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 57;
	            this.instantiation();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definition() {
	    let localctx = new DefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, letoParser.RULE_definition);
	    try {
	        this.state = 62;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case letoParser.T__1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 60;
	            this.componant();
	            break;
	        case letoParser.T__9:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 61;
	            this.relationship();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instantiation() {
	    let localctx = new InstantiationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, letoParser.RULE_instantiation);
	    try {
	        this.state = 66;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case letoParser.T__10:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 64;
	            this.asset();
	            break;
	        case letoParser.T__11:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 65;
	            this.link();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	componant() {
	    let localctx = new ComponantContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, letoParser.RULE_componant);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 68;
	        this.match(letoParser.T__1);
	        this.state = 69;
	        this.id();
	        this.state = 72;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===letoParser.T__2) {
	            this.state = 70;
	            this.match(letoParser.T__2);
	            this.state = 71;
	            this.id();
	        }

	        this.state = 74;
	        this.match(letoParser.T__3);
	        this.state = 75;
	        this.componant_attributes();
	        this.state = 76;
	        this.match(letoParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	componant_attributes() {
	    let localctx = new Componant_attributesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, letoParser.RULE_componant_attributes);
	    var _la = 0; // Token type
	    try {
	        this.state = 95;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case letoParser.T__5:
	        case letoParser.T__7:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 78;
	            this.componant_attribute();
	            this.state = 83;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 79;
	                    this.match(letoParser.T__0);
	                    this.state = 80;
	                    this.componant_attribute(); 
	                }
	                this.state = 85;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	            }

	            this.state = 87;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===letoParser.T__0) {
	                this.state = 86;
	                this.match(letoParser.T__0);
	            }

	            this.state = 90;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===letoParser.COMMENT) {
	                this.state = 89;
	                this.comment();
	            }

	            break;
	        case letoParser.T__4:
	        case letoParser.COMMENT:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 93;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===letoParser.COMMENT) {
	                this.state = 92;
	                this.comment();
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	componant_attribute() {
	    let localctx = new Componant_attributeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, letoParser.RULE_componant_attribute);
	    try {
	        this.state = 99;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case letoParser.T__5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 97;
	            this.logo();
	            break;
	        case letoParser.T__7:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 98;
	            this.hosts();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logo() {
	    let localctx = new LogoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, letoParser.RULE_logo);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this.match(letoParser.T__5);
	        this.state = 102;
	        this.match(letoParser.T__6);
	        this.state = 103;
	        this.match(letoParser.PATH);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	hosts() {
	    let localctx = new HostsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, letoParser.RULE_hosts);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(letoParser.T__7);
	        this.state = 106;
	        this.match(letoParser.T__6);
	        this.state = 107;
	        this.match(letoParser.ID);
	        this.state = 112;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===letoParser.T__8) {
	            this.state = 108;
	            this.match(letoParser.T__8);
	            this.state = 109;
	            this.match(letoParser.ID);
	            this.state = 114;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relationship() {
	    let localctx = new RelationshipContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, letoParser.RULE_relationship);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 115;
	        this.match(letoParser.T__9);
	        this.state = 116;
	        this.id();
	        this.state = 119;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===letoParser.T__2) {
	            this.state = 117;
	            this.match(letoParser.T__2);
	            this.state = 118;
	            this.id();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	asset() {
	    let localctx = new AssetContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, letoParser.RULE_asset);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 121;
	        this.match(letoParser.T__10);
	        this.state = 122;
	        this.id();
	        this.state = 123;
	        this.match(letoParser.T__6);
	        this.state = 124;
	        this.id();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	link() {
	    let localctx = new LinkContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, letoParser.RULE_link);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 126;
	        this.match(letoParser.T__11);
	        this.state = 127;
	        this.id();
	        this.state = 128;
	        this.match(letoParser.T__12);
	        this.state = 129;
	        this.id();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	number() {
	    let localctx = new NumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, letoParser.RULE_number);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(letoParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comment() {
	    let localctx = new CommentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, letoParser.RULE_comment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.match(letoParser.COMMENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	id() {
	    let localctx = new IdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, letoParser.RULE_id);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(letoParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

letoParser.EOF = antlr4.Token.EOF;
letoParser.T__0 = 1;
letoParser.T__1 = 2;
letoParser.T__2 = 3;
letoParser.T__3 = 4;
letoParser.T__4 = 5;
letoParser.T__5 = 6;
letoParser.T__6 = 7;
letoParser.T__7 = 8;
letoParser.T__8 = 9;
letoParser.T__9 = 10;
letoParser.T__10 = 11;
letoParser.T__11 = 12;
letoParser.T__12 = 13;
letoParser.PATH = 14;
letoParser.ID = 15;
letoParser.STRINGLITERAL = 16;
letoParser.LETTRE = 17;
letoParser.NUMBER = 18;
letoParser.FLOAT = 19;
letoParser.COMMENT = 20;
letoParser.EOL = 21;
letoParser.WS = 22;

letoParser.RULE_prog = 0;
letoParser.RULE_line = 1;
letoParser.RULE_instructions = 2;
letoParser.RULE_instruction = 3;
letoParser.RULE_definition = 4;
letoParser.RULE_instantiation = 5;
letoParser.RULE_componant = 6;
letoParser.RULE_componant_attributes = 7;
letoParser.RULE_componant_attribute = 8;
letoParser.RULE_logo = 9;
letoParser.RULE_hosts = 10;
letoParser.RULE_relationship = 11;
letoParser.RULE_asset = 12;
letoParser.RULE_link = 13;
letoParser.RULE_number = 14;
letoParser.RULE_comment = 15;
letoParser.RULE_id = 16;

class ProgContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_prog;
    }

	line = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(LineContext);
	    } else {
	        return this.getTypedRuleContext(LineContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterProg(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitProg(this);
		}
	}


}



class LineContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_line;
    }

	instructions() {
	    return this.getTypedRuleContext(InstructionsContext,0);
	};

	comment() {
	    return this.getTypedRuleContext(CommentContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterLine(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitLine(this);
		}
	}


}



class InstructionsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_instructions;
    }

	instruction = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(InstructionContext);
	    } else {
	        return this.getTypedRuleContext(InstructionContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterInstructions(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitInstructions(this);
		}
	}


}



class InstructionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_instruction;
    }

	definition() {
	    return this.getTypedRuleContext(DefinitionContext,0);
	};

	instantiation() {
	    return this.getTypedRuleContext(InstantiationContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterInstruction(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitInstruction(this);
		}
	}


}



class DefinitionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_definition;
    }

	componant() {
	    return this.getTypedRuleContext(ComponantContext,0);
	};

	relationship() {
	    return this.getTypedRuleContext(RelationshipContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterDefinition(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitDefinition(this);
		}
	}


}



class InstantiationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_instantiation;
    }

	asset() {
	    return this.getTypedRuleContext(AssetContext,0);
	};

	link() {
	    return this.getTypedRuleContext(LinkContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterInstantiation(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitInstantiation(this);
		}
	}


}



class ComponantContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_componant;
    }

	id = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdContext);
	    } else {
	        return this.getTypedRuleContext(IdContext,i);
	    }
	};

	componant_attributes() {
	    return this.getTypedRuleContext(Componant_attributesContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterComponant(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitComponant(this);
		}
	}


}



class Componant_attributesContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_componant_attributes;
    }

	componant_attribute = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Componant_attributeContext);
	    } else {
	        return this.getTypedRuleContext(Componant_attributeContext,i);
	    }
	};

	comment() {
	    return this.getTypedRuleContext(CommentContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterComponant_attributes(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitComponant_attributes(this);
		}
	}


}



class Componant_attributeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_componant_attribute;
    }

	logo() {
	    return this.getTypedRuleContext(LogoContext,0);
	};

	hosts() {
	    return this.getTypedRuleContext(HostsContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterComponant_attribute(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitComponant_attribute(this);
		}
	}


}



class LogoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_logo;
    }

	PATH() {
	    return this.getToken(letoParser.PATH, 0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterLogo(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitLogo(this);
		}
	}


}



class HostsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_hosts;
    }

	ID = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(letoParser.ID);
	    } else {
	        return this.getToken(letoParser.ID, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterHosts(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitHosts(this);
		}
	}


}



class RelationshipContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_relationship;
    }

	id = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdContext);
	    } else {
	        return this.getTypedRuleContext(IdContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterRelationship(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitRelationship(this);
		}
	}


}



class AssetContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_asset;
    }

	id = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdContext);
	    } else {
	        return this.getTypedRuleContext(IdContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterAsset(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitAsset(this);
		}
	}


}



class LinkContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_link;
    }

	id = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdContext);
	    } else {
	        return this.getTypedRuleContext(IdContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterLink(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitLink(this);
		}
	}


}



class NumberContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_number;
    }

	NUMBER() {
	    return this.getToken(letoParser.NUMBER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterNumber(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitNumber(this);
		}
	}


}



class CommentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_comment;
    }

	COMMENT() {
	    return this.getToken(letoParser.COMMENT, 0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterComment(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitComment(this);
		}
	}


}



class IdContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_id;
    }

	ID() {
	    return this.getToken(letoParser.ID, 0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterId(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitId(this);
		}
	}


}




letoParser.ProgContext = ProgContext; 
letoParser.LineContext = LineContext; 
letoParser.InstructionsContext = InstructionsContext; 
letoParser.InstructionContext = InstructionContext; 
letoParser.DefinitionContext = DefinitionContext; 
letoParser.InstantiationContext = InstantiationContext; 
letoParser.ComponantContext = ComponantContext; 
letoParser.Componant_attributesContext = Componant_attributesContext; 
letoParser.Componant_attributeContext = Componant_attributeContext; 
letoParser.LogoContext = LogoContext; 
letoParser.HostsContext = HostsContext; 
letoParser.RelationshipContext = RelationshipContext; 
letoParser.AssetContext = AssetContext; 
letoParser.LinkContext = LinkContext; 
letoParser.NumberContext = NumberContext; 
letoParser.CommentContext = CommentContext; 
letoParser.IdContext = IdContext; 
